Create proposal component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,12 @@
   <div class="four columns">
     <a class="button button-primary" routerLink="/members">Members</a>
   </div>
+  <div class="four columns">
+    <a class="button button-primary" routerLink="/cover">Cover</a>
+  </div>
+  <div class="four columns">
+    <a class="button button-primary" routerLink="/proposals">Proposals</a>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
