--- a/src/app/cover/cover.component.html
+++ b/src/app/cover/cover.component.html
@@ -1,14 +1,28 @@
-<h2>Cover's Song</h2>
+<h2 class="center">Cover's Song</h2>
 
-<div>
-  <a class="button button-xlarge pure-button" [routerLink]="['/proposals']">Propose a new cover song! Click Here!</a>
+<div class="row center"> <a class="button button-primary" [routerLink]="['/proposals']"><h5>Propose a new cover song! Click Here!</h5></a>
 </div>
 
-<p *ngIf="!songs">Loading ...</p>
+<div *ngIf="!songs" class="row">
+  <p>Loading ...</p>
+</div>
 
-<div *ngIf="songs" class="pure-g">
-  <div *ngFor="let song of songs" class="pure-u-1-5 box">
-    <h3>{{song.title}}</h3>
-    <h4>({{song.artist.name}})</h4>
-  </div>
+<div *ngIf="songs" class="row">
+  <table class="u-full-width">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Artist</th>
+        <th class="center">Approved</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <tr *ngFor="let song of songs">
+          <td>{{song.title}}</td>
+          <td>{{song.artist.name}}</td>
+          <td class="center">&#x2714;</td>
+        </tr>
+    </tbody>
+  </table>
 </div>
