--- a/src/app/proposals/proposals.component.html
+++ b/src/app/proposals/proposals.component.html
@@ -1,38 +1,53 @@
-<h2>Proposal's Songs</h2>
+<h2 class="center">Proposal's Songs</h2>
 
-<div *ngIf="!newArtist">
+<div *ngIf="!newArtist" class="row center">
 
-  <div *ngIf="!artists">
-    Loading ...
+  <div *ngIf="!artists" class="row">
+    <p>Loading ...</p>
   </div>
 
-  <div *ngIf="artists">
-    <select *ngIf="artists" (change)="onChangeArtist($event.target.value)">"
-      <option value="0">Select exists</option>
-      <option *ngFor="let artist of artists" [value]="artist.id">{{ artist.name }}</option>
-    </select> OR
-    <button class="pure-button pure-button-primary" (click)="showNewArtist()">Add New Artist</button>
+  <div *ngIf="artists" class="row">
+      <select *ngIf="artists" (change)="onChangeArtist($event.target.value)">"
+        <option value="0">Select exists artist</option>
+        <option *ngFor="let artist of artists" [value]="artist.id">{{ artist.name }}</option>
+      </select>
+      <strong>OR</strong>
+      <button (click)="showNewArtist()">Add New Artist</button>
   </div>
 
 </div>
 
-<div *ngIf="newArtist">
+<div *ngIf="newArtist" class="row center">
   <input #artistName type="text" placeholder="Artist Name">
   <button (click)="addArtist(artistName.value)">Add New</button>
 </div>
 
-<div *ngIf="newArtist || selectedArtist">
-  <label>Proposal Song :</label> <input #songName />
-  <button (click)="addSong(songName.value); songName.value=''">Add</button>
+<!-- New Song -->
+
+<div *ngIf="selectedArtist" class="row center">
+  <input placeholder="Proposal Song" type="text" #songName />
+  <button (click)="addSong(songName.value); songName.value=''">Add Song</button>
 </div>
 
-<hr/>
+<!-- Song List -->
 
-<p *ngIf="!songs">Loading ...</p>
+<div *ngIf="!songs" class="row center">
+  <p>Loading ...</p>
+</div>
 
-<div *ngIf="songs" class="pure-g">
-  <div *ngFor="let song of songs" class="pure-u-1-5 box">
-    <h3>{{song.title}}</h3>
-    <h4>({{song.artist.name}})</h4>
-  </div>
+<div *ngIf="songs" class="row">
+  <table class="u-full-width">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Artist</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let song of songs">
+        <td>{{song.title}}</td>
+        <td>{{song.artist.name}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
